# cmake_LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  config.h.in
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
src/: CMakeLists.txt  camera_fps_euler.h  gl_shader.cpp  gl_shader.h  glm_demo.h  hello_triangle.h  hello_window.h  main.cpp  opengl_vocabulary.txt  openglwindowbase.cpp  openglwindowbase.h  shader.cpp  shader.h  startshader.cpp  startshader.h  starttextures.cpp  starttextures.h
src/file/: rect.fs  rect.fs.glsl  rect.vs.glsl  texture_container.fs.glsl  texture_container.vs  texture_container.vs.glsl  tri.fs  tri.fs.glsl  tri.vs  tri.vs.glsl
